--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "server",
+  "name": "udemy-react-fs-tutorial",
   "version": "1.0.0",
-  "description": "",
+  "description": "tutorial project called Emaily using MERN Stack, Google Oauth, etc",
   "main": "index.js",
   "engines": {
     "node": "8.7.0",
     "npm": "5.4.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "cookie-session": "^2.0.0-beta.3",
+    "express": "^4.16.2",
+    "mongoose": "^4.12.3",
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
