--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
-  "author": "",
+  "author": "benjaminadk",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
